# cmakelist-test-2

./: CMakeLists.txt
common/rmath/: CMakeLists.txt
common/singleton/: CMakeLists.txt
modules/assembly1/: CMakeLists.txt
modules/assembly2/: CMakeLists.txt
modules/module1/: CMakeLists.txt
modules/module2/: CMakeLists.txt
